syntax = "proto3";

package wice;
option go_package = "riasc.eu/wice/pkg/pb";

import "common.proto";
import "event.proto";
import "interface.proto";
import "config.proto";
import "signaling.proto";

message StatusResp {
    repeated Interface interfaces = 1;
}

message StatusParams {
    string intf = 1;
    bytes peer = 2;
}

message RemoveInterfaceParams {
    string intf = 1;
}

message RestartPeerParams {
    string intf = 1;
    bytes peer = 2;
}

message InterfaceConfigParams {
    string name = 1;
    InterfaceConfig interface = 2;
}

message GetSignalingMessageParams {
    // Interface name
    string intf = 1;
    
    // Public key of peer
    bytes peer = 2;
}

message GetSignalingMessageResp {
    SignalingEnvelope envelope = 1;
}

message PutSignalingMessageParams {
    SignalingEnvelope envelope = 1;
}

// Control socket services

service Daemon {
    rpc GetBuildInfo(Empty) returns (BuildInfo) {}
    rpc StreamEvents(Empty) returns (stream Event) {}
    rpc UnWait(Empty) returns (Empty) {}
    rpc Stop(Empty) returns (Empty) {}
    rpc Restart(Empty) returns (Empty) {}
}

service Watcher {
    rpc Sync(Empty) returns (Empty) {}

    rpc GetStatus(StatusParams) returns (StatusResp) {}

    rpc RemoveInterface(RemoveInterfaceParams) returns (Empty) {}

    rpc SyncInterfaceConfig(InterfaceConfigParams) returns (Empty) {}
    rpc AddInterfaceConfig(InterfaceConfigParams) returns (Empty) {}
    rpc SetInterfaceConfig(InterfaceConfigParams) returns (Empty) {}

    // For manual signaling backend
    rpc GetSignalingMessage(GetSignalingMessageParams) returns (GetSignalingMessageResp) {}
    rpc PutSignalingMessage(PutSignalingMessageParams) returns (Empty) {}
}

service EndpointDiscoverySocket {
    rpc RestartPeer(RestartPeerParams) returns (Empty) {}
}

service SignalingSocket {
    rpc GetSignalingMessage(GetSignalingMessageParams) returns (GetSignalingMessageResp) {}
    rpc PutSignalingMessage(PutSignalingMessageParams) returns (Empty) {}
}